# mPIXdaq

./: Anleitung.md  E10-W0314_badpixels.txt  EducatorsGuide.md  README.md  README_de.md  ReleaseNotes.md  analyze_mPIXclusters.ipynb  calculate_dEdx.py  grun_mPIXdaq.py  install_driver_rules.sh  miniPIXdaq.py  pixet.ini  pyproject.toml  requirements.txt  run_mPIXdaq.py  setup.py  sn2987_badpixels.txt
advacam/: __init__.py  pixet.ini  setup.py
analysis/: ClusterSummary.py  LandauFit.py  analyze_mPIXclusters.ipynb  calculate_dEdx.py  grun.py  peakFitter.py  requirements.txt
configs/: MiniPIX-2987.xml  MiniPIX-E10-W0314.xml
doc/: Anleitung.md  EducatorsGuide.md  README_de.md
mpixdaq/: README.md  __init__.py  __main__.py  _version_info.py  argparse_tk_gui.py  mpixdaq.py  mpixhelpers.py  mplhelpers.py  physics_tools.py  pixet.ini  run_mPIXdaq.py
mpixdaq/advacam_arm64/: README.md  __init__.py
mpixdaq/advacam_arm64/factory/: MiniPIX-F07-W0338.xml
mpixdaq/advacam_armhf/: README.md  __init__.py  pixet.ini  pixetVersion.py
mpixdaq/advacam_mac/: __init__.py  pixet.ini  pixetVersion.py
mpixdaq/advacam_win64/: README.md  __init__.py  pixet.ini  pixetVersion.py  pypixet.pyd
mpixdaq/advacam_x86_64/: __init__.py  pixetVersion.py
mpixdaq/advacam_x86_64/factory/: MiniPIX-E10-W0314.xml
