mpixdaq = "mpixdaq"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpixdaq"
dynamic = ["version"]
description = "Provides ADVACAM pixet API to python users"
keywords = ["pip", "minipix", "advacam"]
readme = "README.md"
authors = [
    {name = "Guenter Quast", email = "Guenter.Quast@kit.edu"},
]
dependencies = [
    "NumPy",
    "npy_append_array",
    "matplotlib",
    "Scipy",
    ]
    
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
    ]

requires-python = ">=3.7"

[tool.setuptools.packages.find]
include = ["mpixdaq*"]

[tool.setuptools.package-data]
"*" = ["data/*", "*.so", "*.ini", "*.dll", "*.pyd", "*/factory/*"]

[tool.setuptools.dynamic]
version = {attr = "mpixdaq.__version__"}

[tool.setuptools]
script-files = ["run_mPIXdaq.py"]

[project.urls]
Homepage = "http://www.etp.kit.edu/~quast/"


# - - options for linting tools - - - 

[tool.black]
line-length = 150

[tool.ruff]
# only differences from default 
line-length = 150

[tool.ruff.lint]
# ignore "unable to detect undefined names", "name may be undefined",
# "undefined name", "ambiguous name", "unused variable"
ignore = ["F403", "F405", "F821", "E741", "F841"]

[tool.ruff.format]
quote-style = "preserve"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
# allow imports not at top - needed for conditinal imports
"__init__.py" = ["E402"]
"mpixdaq.py" = ["E402"]
"nun_mPIXdaq.py" = ["E402"]
